[package]
name = "paws-games"
version = "0.5.0"
edition = "2021"
description = "A community library of standalone terminal games for the Paws host — Dog Jump, Earth Online, Tetris, Snake, 2048, Breakout, Space Invaders, Vibe Clicker"
license = "MIT"
homepage = "https://github.com/interesting-vibe-coding/paws-games"
repository = "https://github.com/interesting-vibe-coding/paws-games"
keywords = ["game", "terminal", "tui", "arcade", "games"]
categories = ["command-line-utilities", "games"]

[dependencies]
ratatui = "=0.29.0"
crossterm = "=0.28.1"

[[bin]]
name = "jump-high"
path = "src/bin/jump-high.rs"

[[bin]]
name = "earth-online"
path = "src/bin/earth-online.rs"

[[bin]]
name = "tetris"
path = "src/bin/tetris.rs"

[[bin]]
name = "snake"
path = "src/bin/snake.rs"

[[bin]]
name = "2048"
path = "src/bin/two-zero-four-eight.rs"

[[bin]]
name = "breakout"
path = "src/bin/breakout.rs"

[[bin]]
name = "space-invaders"
path = "src/bin/space-invaders.rs"

[[bin]]
name = "vibe"
path = "src/bin/vibe.rs"
